test/fails/bad_parsing/bad_function1.lgl
int float() { // Can't name a function a datatype
    return 5;
}

void main() {
    return;
}